Fix Whitespace - use HTML Character Entities

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -110,7 +110,7 @@ a:hover {
 
 #footer {
     clear: both;
-    height: 14px;
+    height: 20px;
     margin: 0;
     padding: 1em;
     text-align: center;
